# texttoasciiart

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
src/: CMakeLists.txt  font_colossal.cpp  font_colossal.hpp  main.cpp
test/: CMakeLists.txt  font_colossal_test.cpp  main.cpp
